# passei

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
core/: config.py  settings.py  urls.py
estudos/: admin.py  models.py  urls.py  views.py
estudos/migrations/: 0001_initial.py
estudos/templates/estudos/: base.html  detalhe_curso.html  lista_cursos.html
