[project]
name = "passei"
version = "0.1.0"
description = "Gerenciador de Estudos - Projeto Passei"
authors = [
    {name = "Rogerio Campos",email = "rogerio.campos07@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
